[gd_scene load_steps=7 format=3 uid="uid://dnu85rfbrbsx"]

[ext_resource type="Script" path="res://Scenes/Menus/Level Complete.gd" id="1_vr66b"]
[ext_resource type="Theme" uid="uid://doqtdb66xr3lh" path="res://Scenes/normal.tres" id="1_x0jcn"]
[ext_resource type="Texture2D" uid="uid://dqu54e2jef73i" path="res://Free/Background/Purple.png" id="3_hbvsc"]
[ext_resource type="Texture2D" uid="uid://cow6av5et7eps" path="res://Free/Menu/Buttons/Next.png" id="4_hmjjm"]
[ext_resource type="Texture2D" uid="uid://btitirtcswmiv" path="res://Free/Menu/Buttons/Menu.png" id="4_p6qgo"]
[ext_resource type="Theme" uid="uid://cb1g4uqcrxru8" path="res://Scenes/exit.tres" id="5_8svkp"]

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x0jcn")
script = ExtResource("1_vr66b")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(64, 64)
autoscroll = Vector2(30, 30)
repeat_times = 19

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture_repeat = 2
texture = ExtResource("3_hbvsc")

[node name="LevelCompleteText" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -304.0
offset_top = -250.0
offset_right = 305.0
offset_bottom = -199.0
pivot_offset = Vector2(314, 27)
theme_override_font_sizes/font_size = 50
text = "Level Complete!"

[node name="GameCompleteText" type="Label" parent="."]
layout_mode = 0
offset_left = -304.0
offset_top = -250.0
offset_right = 305.0
offset_bottom = -199.0
pivot_offset = Vector2(314, 27)
theme_override_font_sizes/font_size = 50
text = "Congratulations!"

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = -150.0
offset_right = 128.0
offset_bottom = -109.0
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 42.0
offset_right = 168.0
offset_bottom = 231.0
grow_horizontal = 2
scale = Vector2(2.22995, 2.22995)
pivot_offset = Vector2(165.923, 181.618)

[node name="NextLevel" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.014
offset_top = -13.1612
offset_right = 106.986
offset_bottom = 23.8388
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next Level"
icon = ExtResource("4_hmjjm")
expand_icon = true

[node name="ReturnToMenu" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.5963
offset_top = -27.3905
offset_right = 101.404
offset_bottom = 7.60948
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(100.451, 17.4892)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_8svkp")
text = "Main Menu"
icon = ExtResource("4_p6qgo")
expand_icon = true

[connection signal="mouse_entered" from="Control/NextLevel" to="." method="_on_next_level_mouse_entered"]
[connection signal="pressed" from="Control/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="mouse_entered" from="Control/ReturnToMenu" to="." method="_on_return_to_menu_mouse_entered"]
[connection signal="pressed" from="Control/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
